# microBioRust

./: 404.html  ROADMAP.md  index.html  index.json  info.json  regressions.xml  sitemap.xml
graphs/branch-main/machine-github-runner/python-3.12/: bench_pipeline.PipelineSuite.peakmem_process_all.json  bench_pipeline.PipelineSuite.time_process_all.json  bench_pipeline.PipelineSuite.time_process_all_iterations.json  bench_pipeline.PipelineSuite.track_parsing_latency.json  summary.json
graphs/summary/: bench_pipeline.PipelineSuite.peakmem_process_all.json  bench_pipeline.PipelineSuite.track_parsing_latency.json
installation/: index.html
microBioRust/: Cargo.toml
microBioRust/src/: blast.rs  lib.rs
microBioRust/tests/: blast_parser.rs
results/github-runner/: 425c966e-virtualenv-py3.12.json  c9a69109-virtualenv-py3.12.json
usage/: index.html
windows_install/: index.html
